force-app/main/default/objects/Company__c/Company__c.object-meta.xml
<CustomObject>
    <description>Task:
1. Create an object Company (With fields Name, Address,email,account,Total Employees Salary)
2. Create a child to the company name Employee (with fields Name, email,phone,salary,designation)
Need the All the employees salary to be calculated an shown on the company record.</description>
    <label>Company</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Companies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>