force-app/main/default/objects/Company__c/fields/Roll_up_eg_Count__c.field-meta.xml
<CustomField>
    <fullName>Roll_up_eg_Count__c</fullName>
    <label>Roll up eg Count</label>
    <summaryForeignKey>Employee__c.Company__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>