force-app/main/default/objects/Company__c/fields/Roll_up_Eg_Max__c.field-meta.xml
<CustomField>
    <fullName>Roll_up_Eg_Max__c</fullName>
    <label>Roll up Eg Max</label>
    <summarizedField>Employee__c.salary__c</summarizedField>
    <summaryForeignKey>Employee__c.Company__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>