force-app/main/default/objects/Company__c/fields/Rool_Up_Eg_Min__c.field-meta.xml
<CustomField>
    <fullName>Rool_Up_Eg_Min__c</fullName>
    <label>Rool Up Eg Min</label>
    <summarizedField>Employee__c.DOB__c</summarizedField>
    <summaryForeignKey>Employee__c.Company__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>