force-app/main/default/objects/Company__c/fields/Rool_Up_eg_Sum__c.field-meta.xml
<CustomField>
    <fullName>Rool_Up_eg_Sum__c</fullName>
    <label>Rool Up eg Sum</label>
    <summarizedField>Employee__c.salary__c</summarizedField>
    <summaryForeignKey>Employee__c.Company__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>