force-app/main/default/objects/Company__c/fields/Total_Employees_Salary__c.field-meta.xml
<CustomField>
    <fullName>Total_Employees_Salary__c</fullName>
    <label>Total Employees Salary</label>
    <summarizedField>Employee__c.salary__c</summarizedField>
    <summaryForeignKey>Employee__c.Company__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>